--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/src/components/confirmacionVuelos.css
+/src/components/confirmacionVuelos.jsx
